--- a/composer.json
+++ b/composer.json
@@ -1,28 +1,32 @@
 {
-	"name": "congredi/notification-system",
-	"authors": [
-		{
-			"name": "Andrei Kun",
-			"email": "andrei.kun@tss-yonder.com"
-		}
-	],
-	"require": {
-		"php": "> 5.5.9",
-		"illuminate/database": "5.1.*",
-		"illuminate/support": "5.1.*",
-		"illuminate/queue": "5.1.*",
-		"illuminate/contracts": "5.1.*",
-		"illuminate/bus": "5.1.*",
-		"illuminate/view": "5.1.*",
-		"illuminate/log": "5.1.*",
-		"sly/notification-pusher" : "2.2.11",
-		"twilio/sdk": "4.5",
-		"arcturial/clickatell": "2.1.3",
-		"mockery/mockery": "0.9.4"
+  "name": "congredi/notification-system",
+  "authors": [
+	{
+	  "name": "Andrei Kun",
+	  "email": "andrei.kun@tss-yonder.com"
 	},
-	"autoload": {
-		"psr-4": {
-			"Congredi\\NotificationSystem\\": "src"
-		}
+	{
+	  "name": "John van Terheijden",
+	  "email": "john@fastguide.eu"
 	}
+  ],
+  "require": {
+	"php": "> 5.5.9",
+	"illuminate/database": "5.3.*",
+	"illuminate/support": "5.3.*",
+	"illuminate/queue": "5.3.*",
+	"illuminate/contracts": "5.3.*",
+	"illuminate/bus": "5.3.*",
+	"illuminate/view": "5.3.*",
+	"illuminate/log": "5.3.*",
+	"sly/notification-pusher": "2.2.11",
+	"twilio/sdk": "4.5",
+	"arcturial/clickatell": "2.1.3",
+	"mockery/mockery": "0.9.4"
+  },
+  "autoload": {
+	"psr-4": {
+	  "Congredi\\NotificationSystem\\": "src"
+	}
+  }
 }
