--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,12 @@
 	  "email": "john@fastguide.eu"
 	}
   ],
+	"repositories": [
+		{
+			"type": "vcs",
+			"url": "https://github.com/johnvt/NotificationPusher"
+		},
+	
   "require": {
 	"php": "> 5.5.9",
 	"illuminate/database": "5.3.*",
@@ -19,7 +25,7 @@
 	"illuminate/bus": "5.3.*",
 	"illuminate/view": "5.3.*",
 	"illuminate/log": "5.3.*",
-	"sly/notification-pusher": "2.2.11",
+	"congredi/notification-pusher": "dev-master",
 	"twilio/sdk": "4.5",
 	"arcturial/clickatell": "2.1.3",
 	"mockery/mockery": "0.9.4"
