--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
 	"illuminate/bus": "5.3.*",
 	"illuminate/view": "5.3.*",
 	"illuminate/log": "5.3.*",
-	"sly/notification-pusher": "dev-master",
+	"sly/notification-pusher": "~2.2",
 	"twilio/sdk": "4.5",
 	"arcturial/clickatell": "2.1.3",
 	"mockery/mockery": "0.9.4"
